# phishing-surface-monitor

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  config.py  logger.py  phishing_surface_monitor_cli.py  pyproject.toml
alerting/: __init__.py  domain_alerts.py
analyzers/: brand_impersonation_detector.py  ct_alerts.py  ct_monitor.py  dns_checker.py  email_header_analyzer.py  hostname_validation.py  lookalike_scorer.py  page_clone_detector.py  phishing_kit_detector.py  risk_score.py  social_engineering_detector.py  typosquatting.py  url_deobfuscator.py  whois_age_scorer.py
cli/: main.py
docs/: architecture.md
monitors/: certificate_abuse_monitor.py  ct_monitor.py  dmarc_check.py  dns_monitor.py  subdomain_takeover_detector.py
reports/: evidence.py  generator.py  report.py  takedown.py  takedown_case.py  takedown_evidence.py
schemas/: case.py
tests/: test_brand_impersonation_detector.py  test_certificate_abuse_monitor.py  test_cli_output_dir.py  test_ct_alerts.py  test_ct_monitor.py  test_ct_monitor_jsonl.py  test_detector.py  test_dns_checker.py  test_dns_monitor.py  test_domain_normalization.py  test_email_header_analyzer.py  test_email_security.py  test_link_triage_cli.py  test_lookalike_scorer.py  test_page_clone_detector.py  test_phishing_kit_detector.py  test_registrar_only_evidence.py  test_risk_model.py  test_scan_only_resolved_filter.py  test_scan_sort_by_risk.py  test_social_engineering_detector.py  test_subdomain_takeover_detector.py  test_takedown_case.py  test_takedown_evidence.py  (+2 more)
(+6 files in other folders)
